--- a/meta-bsp/conf/machine/o-mini-server.conf
+++ b/meta-bsp/conf/machine/o-mini-server.conf
@@ -48,8 +48,8 @@ IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot-fslc"
 
 UBOOT_SUFFIX = "bin"
 
-UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd]       = "imx8mq_evk_config,sdcard"
+UBOOT_CONFIG ??= "emmc"
+UBOOT_CONFIG[emmc]       = "imx8mq_evk_config,sdcard"
 
 SPL_BINARY = "spl/u-boot-spl.bin"
 
